--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Yajun Jia # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
-  <br><br>
+  <br><br>seek
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/yajun-mia-jia">View My LinkedIn Profile</a> 
