--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 title: Yajun Jia # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>seek
+  First description
+  <br><br>
+  Seeking full time position in Data Analyst, Data Scientist, Research Analyst.
+  <br><br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/yajun-mia-jia">View My LinkedIn Profile</a> 
