--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Yajun Jia # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description
+  4+ years of Data Analyst and Research Analyst experience. 
+  Possess Master's degree in Research, Measurement & Statistics from Texas A&M University in 2016.
   <br><br>
-  Seeking full time position in Data Analyst, Data Scientist, Research Analyst.
-  <br><br>
-  Second description 
+  Currently pursuing my doctoral degree at Texas A&M University. 
+  I'm working as Data/Research Analyst in 3 research centers at Texas A&M University.
   <br><br>
   <a href="https://www.linkedin.com/in/yajun-mia-jia">View My LinkedIn Profile</a> 
   
